Fix spacing on desktop-sized decorated dropcaps

--- a/app/src/global.scss
+++ b/app/src/global.scss
@@ -257,7 +257,7 @@ body {
     .dropcaps-decorated {
       --ldf-drop-font-size: 3.5em;
       --ldf-drop-margin-right: 0.05em;
-      --ldf-drop-margin-top: 0.1em;
+      --ldf-drop-margin-top: 0;
       --ldf-drop-line-height: 0.5em;
       --ldf-psalm-first-half-verse-display: inline-block;
     }
